--- a/src/index.html
+++ b/src/index.html
@@ -2,16 +2,36 @@
 <html lang="hu">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="/FaviconLogo.ico" type="image/x-icon">
-    <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="/FaviconLogo.ico" type="image/x-icon" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Dobák Fruzsina Fotózás - Professzionális fotózás kreatív családi- és portréfotózás, rendezvényfotózás (sport, esküvő), budoir témákban.">
-    <meta name="keywords" content="Dobák Fruzsina Fotózás, Reismann Marian, fotózás, családi fotózás, portréfotózás, rendezvényfotózás, sportfotózás, esküvői fotózás, budoir, természetes képek, őszinte képek">
-    <meta property="og:title" content="Dobák Fruzsina Fotózás – Kreatív és természetes képek szakértője">
-    <meta property="og:description" content="Dobák Fruzsina Fotózás - Professzionális fotózás kreatív családi- és portréfotózás, rendezvényfotózás (sport, esküvő), budoir témákban.">
-    <meta name="author" content="Dobák Fruzsina & Frontweb">
+    <meta
+      name="description"
+      content="Dobák Fruzsina Fotózás - Professzionális fotózás kreatív családi- és portréfotózás, rendezvényfotózás (sport, esküvő), budoir témákban."
+    />
+    <meta
+      name="keywords"
+      content="Dobák Fruzsina Fotózás, Reismann Marian, fotózás, családi fotózás, portréfotózás, rendezvényfotózás, sportfotózás, esküvői fotózás, budoir, természetes képek, őszinte képek"
+    />
+    <meta
+      property="og:title"
+      content="Dobák Fruzsina Fotózás – Kreatív és természetes képek szakértője"
+    />
+    <meta
+      property="og:description"
+      content="Dobák Fruzsina Fotózás - Professzionális fotózás kreatív családi- és portréfotózás, rendezvényfotózás (sport, esküvő), budoir témákban."
+    />
+    <meta name="author" content="Dobák Fruzsina & Frontweb" />
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
