--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,68 @@
 <!DOCTYPE html>
 <html lang="hu">
+  <head>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-8NC5Y1Q1ZX"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-<head>
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-8NC5Y1Q1ZX"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'G-8NC5Y1Q1ZX');
-  </script>
-  <meta charset="utf-8" />
-  <link rel="shortcut icon" href="/FaviconLogo.ico" type="image/x-icon">
-  <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description"
-    content="Dobák Fruzsina Fotózás - Professzionális fotózás kreatív családi- és portréfotózás, rendezvényfotózás (sport, esküvő), budoir témákban.">
-  <meta name="keywords"
-    content="Dobák Fruzsina Fotózás, Reismann Marian, fotózás, családi fotózás, portréfotózás, rendezvényfotózás, sportfotózás, esküvői fotózás, budoir, természetes képek, őszinte képek">
-  <meta property="og:title" content="Dobák Fruzsina Fotózás – Kreatív és természetes képek szakértője">
-  <meta property="og:description"
-    content="Dobák Fruzsina Fotózás - Professzionális fotózás kreatív családi- és portréfotózás, rendezvényfotózás (sport, esküvő), budoir témákban.">
-  <meta name="author" content="Dobák Fruzsina & Frontweb">
-  <!--
+      gtag("config", "G-8NC5Y1Q1ZX");
+    </script>
+    <meta charset="utf-8" />
+    <link rel="shortcut icon" href="/FaviconLogo.ico" type="image/x-icon" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Dobák Fruzsina Fotózás - Professzionális fotózás kreatív családi- és portréfotózás, rendezvényfotózás (sport, esküvő), budoir témákban."
+    />
+    <meta
+      name="keywords"
+      content="Dobák Fruzsina Fotózás, Reismann Marian, fotózás, családi fotózás, portréfotózás, rendezvényfotózás, sportfotózás, esküvői fotózás, budoir, természetes képek, őszinte képek"
+    />
+    <meta
+      property="og:title"
+      content="Dobák Fruzsina Fotózás – Kreatív és természetes képek szakértője"
+    />
+    <meta
+      property="og:description"
+      content="Dobák Fruzsina Fotózás - Professzionális fotózás kreatív családi- és portréfotózás, rendezvényfotózás (sport, esküvő), budoir témákban."
+    />
+    <meta name="author" content="Dobák Fruzsina & Frontweb" />
+    <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <script src="https://www.google.com/recaptcha/api.js?render=6LfS378lAAAAABNByvfMus2mzznY4ZHzmThpaFUO"></script>
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
+      rel="stylesheet"
+    />
+    <script src="https://www.google.com/recaptcha/api.js?render=6LfS378lAAAAABNByvfMus2mzznY4ZHzmThpaFUO"></script>
 
-  <style>
-    .grecaptcha-badge {
-      display: none !important;
-    }
-  </style>
-  <!--
+    <style>
+      .grecaptcha-badge {
+        display: none !important;
+      }
+    </style>
+    <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -46,13 +71,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>FruzsiPhoto</title>
-</head>
+    <title>FruzsiPhoto</title>
+  </head>
 
-<body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
-  <!--
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -62,6 +87,5 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-</body>
-
+  </body>
 </html>
