--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
       property="og:description"
       content="Dobák Fruzsina Fotózás - Professzionális fotózás kreatív családi- és portréfotózás, rendezvényfotózás (sport, esküvő), budoir témákban."
     />
-    <meta name="author" content="Dobák Fruzsina & Frontweb" />
+    <meta name="author" content="Szivbolsutok & Frontweb" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
