--- a/public/404.html
+++ b/public/404.html
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
 
-    <meta name="description" content="Dobák Fruzsina Fotózás - Kreatív családi- és portréfotózás, rendezvényfotózás (sport, esküvő), budoir.">
-    <meta name="keywords" content="fotózás, családi fotózás, portréfotózás, rendezvényfotózás, sportfotózás, esküvő, budoir, Reismann Marian, Dobák Fruzsina Fotózás">
-    <meta name="author" content="Dobák Fruzsina & FrontWeb">
+    <meta name="description" content="Szívből sütök - hagyományos torták, burkolt torták, linzertorták, macaronok, hagyományos sütemények, mentes sütemények és fondant figurák készítése.">
+    <meta name="keywords" content="cukrász, hagyományos torták, burkolt torták, linzertorták, macaronok, hagyományos sütemények, mentes sütemények, fondant figurák">
+    <meta name="author" content="Szívből sütök & FrontWeb">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="Dobák Fruzsina Fotózás | Kreatív családi- és portréfotózás, rendezvényfotózás, esküvő, budoir">
-    <meta property="og:description" content="Fruzsina Fotózás - Kreatív családi- és portréfotózás, rendezvényfotózás (sport, esküvő), budoir.">
-    <meta property="og:url" content="https://www.fruzsiphoto.hu/">
+    <meta property="og:title" content="Szívből sütök Cukrász Weboldal">
+    <meta property="og:description" content="Szívből sütök - hagyományos torták, burkolt torták, linzertorták, macaronok, hagyományos sütemények, mentes sütemények és fondant figurák készítése.">
+    <meta property="og:url" content="https://www.szivbolsutok.hu/">
     <meta property="og:type" content="website">
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -31,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Fruzsiphoto</title>
+    <title>Szívből sütök</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
