--- a/public/index.html
+++ b/public/index.html
@@ -29,19 +29,19 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Dobák Fruzsina Fotózás - Professzionális fotózás kreatív családi- és portréfotózás, rendezvényfotózás (sport, esküvő), budoir témákban."
+      content="Szívből sütök - hagyományos torták, burkolt torták, linzertorták, macaronok, hagyományos sütemények, mentes sütemények és fondant figurák készítése."
     />
     <meta
       name="keywords"
-      content="Dobák Fruzsina Fotózás, Reismann Marian, fotózás, családi fotózás, portréfotózás, rendezvényfotózás, sportfotózás, esküvői fotózás, budoir, természetes képek, őszinte képek"
+      content="cukrász, hagyományos torták, burkolt torták, linzertorták, macaronok, hagyományos sütemények, mentes sütemények, fondant figurák"
     />
     <meta
       property="og:title"
-      content="Dobák Fruzsina Fotózás – Kreatív és természetes képek szakértője"
+      content="Szívből sütök Cukrász Weboldal"
     />
     <meta
       property="og:description"
-      content="Dobák Fruzsina Fotózás - Professzionális fotózás kreatív családi- és portréfotózás, rendezvényfotózás (sport, esküvő), budoir témákban."
+      content="Szívből sütök - hagyományos torták, burkolt torták, linzertorták, macaronok, hagyományos sütemények, mentes sütemények és fondant figurák készítése."
     />
     <meta name="author" content="Szivbolsutok & Frontweb" />
     <!--
