--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       }
       gtag("js", new Date());
 
-      gtag("config", "G-8NC5Y1Q1ZX");
+      gtag("config", "G-RJ4P0NV679");
     </script>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="/FaviconLogo.ico" type="image/x-icon" />
